# odysseus_preview

./: .gitignore  CLAUDE.md  CLA_TEMPLATE.md  LICENSE  README.md  SLAM_BACKEND.md  marginalization_i_guess.md  uhhhhh.txt
lessons/: Chapters.md  (+1 more)
odysseus-slam/: Cargo.toml  SLAM_BACKEND.md  check_spline.py
odysseus-slam-frontend/: Cargo.toml  SLAM_FRONTEND.md
odysseus-slam-frontend/examples/: detect_features.rs  stereo_match.rs  track_sequence.rs  track_sequence_rerun.rs
odysseus-slam-frontend/src/: descriptor.rs  detector.rs  lib.rs  lk_tracker.rs  stereo_matcher.rs  tracker.rs
odysseus-slam/blender_stuff/: export_greeble_room.py  export_moshi_room.py  export_spline.py  greeble_room.blend  greeble_room_simple.blend  how_to_export.md
odysseus-slam/examples/: imu_simulation_demo.rs  incremental_slam_demo.rs  vio_demo.rs  visualize_greeble_room.rs  visualize_jacobian_sparsity.rs
odysseus-slam/src/: frame_graph.rs  lib.rs  slam_system.rs  spline.rs  trajectory.rs  utils.rs  visualization.rs  world_state.rs
odysseus-slam/src/camera/: mod.rs
odysseus-slam/src/geometry/: mod.rs
odysseus-slam/src/imu/: mod.rs  optimization.rs  preintegration.rs  residuals.rs  simulator.rs  types.rs
odysseus-slam/src/math/: mod.rs  se3.rs  so3.rs
odysseus-slam/src/optimization/: marginalization.rs  mod.rs  slam.rs  vio.rs
odysseus-solver/: Cargo.toml  README.md  SPRS_NOTES.md
odysseus-solver/examples/: 1d_controller_marginalization.rs  2d_marg_matrix.rs  2d_marg_playground.rs  2d_marg_sqrt.rs  2d_marg_written_out.rs  MARGINALIZATION.md  f32_demo.rs  marginalization_common.rs  numberline_slam_marg.rs  pointcloud_alignment_rerun.rs  quickstart.rs  robot_arm_2d.rs  simple_optimization.rs  solver_f32_demo.rs
odysseus-solver/src/: jet.rs  lib.rs  math3d.rs  solver.rs  sparse_solver.rs
recycling_bin/: Cargo.toml
recycling_bin/arena-autodiff-macros/: Cargo.toml
recycling_bin/examples/: kinematic_chain_rerun.rs  pointcloud_alignment.rs
recycling_bin/src/: f64_ctx.rs  jet.rs  lib.rs  math3d.rs  math_context.rs  math_ctx.rs  solver.rs
(+2 files in other folders)
