[package]
name = "odysseus-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
num-traits = "0.2"
sprs = "0.11"
sprs-ldl = "0.10"
rerun = { version = "0.27.2", optional = true }
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[features]
default = []
visualization = ["rerun"]
